--- a/index.html
+++ b/index.html
@@ -8,11 +8,26 @@
     <meta name="description" content="A loving home-style dog boarding and daycare service built with passion and care." />
 
 
-    <!-- TODO: Update og:title to match your application name -->
+    <!-- Open Graph / Facebook -->
     <meta property="og:title" content="Cheezy's Homestay for Dogs" />
     <meta property="og:description" content="A loving home-style dog boarding and daycare service built with passion and care." />
     <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://your-site-url.example/" />
+    <meta property="og:image" content="/social-logo.svg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
 
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Cheezy's Homestay for Dogs" />
+    <meta name="twitter:description" content="A loving home-style dog boarding and daycare service built with passion and care." />
+    <meta name="twitter:image" content="/social-logo.svg" />
+
+    <!-- Favicon and touch icons -->
+    <link rel="icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" href="/favicon.ico" />
+
+    <!-- Note: Some social platforms don't render SVG; if your image doesn't appear, add a PNG/JPEG at /social-logo.png -->
 
   </head>
 
